lang/tests/compile_fail/account_custom_removed.rs
#![allow(unexpected_cfgs)]

use quasar_lang::prelude::*;

#[account(custom)]
pub struct RemovedCustomAccount;

fn main() {}
